CHANGES
=======

1.7.1
-----

* build: update cibuildwheel
* fix: re-simplification works
* fix(simplify): double multiplication by resolution
* fix: avoid numpy import error
* docs: removed sentence about design flaw

1.7.0
-----

* release(1.7.0): deprecates get\_mesh in favor of get
* fix: transpose of mesh image (#38)

1.6.2
-----

* release(1.6.2): obj import accepts scientific notation
* feat: allow from\_obj to parse scientific notation (e.g. 1e-5)
* test: check broken fanc example to prevent regressions
* build: update cibuildwheel
* docs: update installation instructions

1.6.1
-----

* release(1.6.1): fixes bug in marching cubes
* docs: remove old comment
* test: check C and F meshes same
* fix(marching\_cubes): incorrect strides when array is C order
* update build system for py311

1.6.0
-----

* release(1.6.0): removed dependency on BOOST
* refactor/install: remove Boost as dependency (#37)

1.5.0
-----

* release(1.5.0): major performance enhancement to MC and simplify
* fix: remove other unnecessary always inline
* fix: remove always\_inline as it doesn't seem necessary for perf
* build: bump windows to c++17
* test: only check simplified meshes on macos
* perf+refactor: faster and cleaner marching cubes implementation
* test: remove F order simplify test
* test: add simplification test
* refactor: switch \_faces back to unordered\_map
* install: move macro declaration in front of cpp files
* perf: use robin\_hood flat hash map to improve simplification (#33)
* perf: remove seemingly unnecessary check (#32)
* docs: how much does simplification save?
* feat(Mesh): add nbytes property
* feat: add simplification benchmark
* docs: discuss why data.T

1.4.2
-----

* fix: simplification works on larger meshes (#31)

1.4.1
-----

* release(1.4.1): misspelled variable name
* fix: misspelled variable
* redesign: shrink unordered\_map when clearing data
* build: fix incorrect tox parameter

1.4.0
-----
